# AndroidLivePusher

app/: build.gradle
app/src/main/java/com/yxt/xiaozhenkeji/androidlivepusher/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
livepusher/: CMakeLists.txt  build.gradle
livepusher/src/main/cpp/: MessageQueue.cpp  MessageQueue.h  RtmpPush.cpp  RtmpPush.h  push.cpp
livepusher/src/main/cpp/librtmp/: CMakeLists.txt  rtmp.c  rtmp.h
livepusher/src/main/java/com/yxt/livepusher/camera/: CameraFboRender.java  CameraRender.java  YUCamera.java
livepusher/src/main/java/com/yxt/livepusher/egl/: BaseRendeer.java  EglHelper.java  YUEGLSurfaceView.java
livepusher/src/main/java/com/yxt/livepusher/encodec/: BasePushEncoder.java  BaseVideoEncoder.java  EncodecRender.java  PushEncoder.java
livepusher/src/main/java/com/yxt/livepusher/network/rtmp/: ConnectListenr.java  RtmpPush.java
livepusher/src/main/java/com/yxt/livepusher/test/: CameraGLRender.java  EGLSurface.java  YxtStream.java
livepusher/src/main/java/com/yxt/livepusher/utils/: AudioRecordUitl.java  ShaderUtils.java
